
    * Expanded README. (Jonathan Lange)

    * Expanded TODO. (Jonathan Lange)

    * Started keeping a NEWS file! (Jonathan Lange)

  BUG FIXES:

    * Calling getResource on a dirty resource now triggers a clean and re-make
      of that resource. (Jonathan Lange)

    * All resources are dropped when a test with no declared resources is run.
      (James Henstridge)

  API CHANGES:

    * adsorbSuite is now deprecated in favour of addTest. addTest now flattens
      standard library TestSuites and distributes custom TestSuite across
      their member tests. (Jonathan Lange)

    * ResourcedTestCase.setUpResources and tearDownResources are now instance
      methods, not static methods. (Jonathan Lange)

    * All methods on TestResource are now instance methods, and thus tests
      should use instances of TestResource subclasses, not the classes
      themselves. (Jonathan Lange)

    * Now imports from testtools rather than pyunit3k. (Jonathan Lange)

    * ResourcedTestCase will now look for resources in the 'resources'
      attribute, rather than the '_resources' attribute. (Jonathan Lange)

    * ResourcedTestCase.setUpResources and tearDownResources are now instance
      methods, not static methods. (Jonathan Lange)

    * SampleTestResource has been removed. (Jonathan Lange)

    * TestResource.make has had an API change: it must now accept a
      dependency_resources parameter which is a dictionary listing the
      dependencies that will be provided to the resource. This parameter is
      provided so the resource can access its dependencies during setUp, if
      needed. (Robert Collins)

    * TestResource subclasses should override 'make' and 'clean' where they
      previously overrode '_makeResource' and '_cleanResource'.
      (Jonathan Lange)

    * TestResource.setResource has been renamed to _setResource.
      (Jonathan Lange)

  INTERNALS:

    * A lot of the tests have been split up into smaller tests. Others have